--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify-json/guidance": "^1.1.6",
     "@iconify-json/icon-park-outline": "^1.1.15",
     "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/pajamas": "^1.1.43",
     "@slidev/types": "^0.48.3",
     "codemirror-theme-vars": "^0.1.2",
     "prism-theme-vars": "^0.2.4",
